RESOLVED FIXED195036
[Mac WK2] storage/indexeddb/IDBObject-leak.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=195036
Summary [Mac WK2] storage/indexeddb/IDBObject-leak.html is flaky
Sihui Liu
Reported 2019-02-25 20:49:34 PST
The test is flaky on release build.
Attachments
Patch (1.68 KB, patch)
2019-02-25 20:57 PST, Sihui Liu
no flags
Patch (6.61 KB, patch)
2019-02-26 13:30 PST, Sihui Liu
no flags
Patch (6.62 KB, patch)
2019-02-26 13:32 PST, Sihui Liu
no flags
Patch for landing (6.62 KB, patch)
2019-02-26 15:01 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-02-25 20:57:51 PST
Sihui Liu
Comment 2 2019-02-26 13:30:47 PST
Geoffrey Garen
Comment 3 2019-02-26 13:32:24 PST
Comment on attachment 363013 [details] Patch r=me
Sihui Liu
Comment 4 2019-02-26 13:32:45 PST
Sihui Liu
Comment 5 2019-02-26 15:01:25 PST
Created attachment 363026 [details] Patch for landing
WebKit Commit Bot
Comment 6 2019-02-26 15:38:37 PST
Comment on attachment 363026 [details] Patch for landing Clearing flags on attachment: 363026 Committed r242110: <https://trac.webkit.org/changeset/242110>
WebKit Commit Bot
Comment 7 2019-02-26 15:38:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-02-26 15:40:01 PST
Note You need to log in before you can comment on or make changes to this bug.